jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;


typedef struct
{
	char Indice[4];
	double Aliquota;
	BOOL Tipo;
	double Total;
	BOOL Sequencia;
} AliquotaRec;


typedef struct
{
	char Indice[4];
	char Descricao[30];
	int Contador;
} RelatorioGerencialRec;

DllImport int ECF_DadosReducaoZClass_GetISSQN(const INTPTR ecfHandle, AliquotaRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetISSQNCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetNaoTributadoICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetNCN(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetNumeroCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDaLoja(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDeSerie(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetNumeroDoECF(const INTPTR ecfHandle, PCHAR buffer, const int bufferlen);

DllImport int ECF_DadosReducaoZClass_GetRG(const INTPTR ecfHandle, RelatorioGerencialRec* record, const int value);

DllImport int ECF_DadosReducaoZClass_GetRGCount(const INTPTR ecfHandle);

DllImport int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalICMS(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetValorGrandeTotal(const INTPTR ecfHandle, double* value);