jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java


	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetISSQN(const INTPTR, AliquotaRec*, const int)</code><br>
	 * <i>native declaration : line 185</i>
	 */
	int ECF_DadosReducaoZClass_GetISSQN(int ecfHandle, AliquotaRec record, int value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetISSQNCount(const INTPTR)</code><br>
	 * <i>native declaration : line 186</i>
	 */
	int ECF_DadosReducaoZClass_GetISSQNCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNaoTributadoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 187</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNaoTributadoICMS(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetNaoTributadoICMS(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNaoTributadoICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNaoTributadoICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 187</i>
	 */
	int ECF_DadosReducaoZClass_GetNaoTributadoICMS(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 188</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNaoTributadoISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetNaoTributadoISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 188</i>
	 */
	int ECF_DadosReducaoZClass_GetNaoTributadoISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNCN(const INTPTR)</code><br>
	 * <i>native declaration : line 189</i>
	 */
	int ECF_DadosReducaoZClass_GetNCN(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroCOOInicial(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 190</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNumeroCOOInicial(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_GetNumeroCOOInicial(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNumeroCOOInicial(int ecfHandle, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroCOOInicial(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 190</i>
	 */
	int ECF_DadosReducaoZClass_GetNumeroCOOInicial(int ecfHandle, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDaLoja(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 191</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNumeroDaLoja(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_GetNumeroDaLoja(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNumeroDaLoja(int ecfHandle, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDaLoja(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 191</i>
	 */
	int ECF_DadosReducaoZClass_GetNumeroDaLoja(int ecfHandle, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDeSerie(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 192</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNumeroDeSerie(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_GetNumeroDeSerie(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNumeroDeSerie(int ecfHandle, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDeSerie(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 192</i>
	 */
	int ECF_DadosReducaoZClass_GetNumeroDeSerie(int ecfHandle, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 193</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(int ecfHandle, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 193</i>
	 */
	int ECF_DadosReducaoZClass_GetNumeroDeSerieMFD(int ecfHandle, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDoECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 194</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetNumeroDoECF(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_GetNumeroDoECF(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetNumeroDoECF(int ecfHandle, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetNumeroDoECF(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 194</i>
	 */
	int ECF_DadosReducaoZClass_GetNumeroDoECF(int ecfHandle, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetRG(const INTPTR, RelatorioGerencialRec*, const int)</code><br>
	 * <i>native declaration : line 195</i>
	 */
	int ECF_DadosReducaoZClass_GetRG(int ecfHandle, RelatorioGerencialRec record, int value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetRGCount(const INTPTR)</code><br>
	 * <i>native declaration : line 196</i>
	 */
	int ECF_DadosReducaoZClass_GetRGCount(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 197</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 197</i>
	 */
	int ECF_DadosReducaoZClass_GetSubstituicaoTributariaICMS(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 198</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 198</i>
	 */
	int ECF_DadosReducaoZClass_GetSubstituicaoTributariaISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 199</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetTotalICMS(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetTotalICMS(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetTotalICMS(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalICMS(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 199</i>
	 */
	int ECF_DadosReducaoZClass_GetTotalICMS(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 200</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetTotalISSQN(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetTotalISSQN(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetTotalISSQN(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalISSQN(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 200</i>
	 */
	int ECF_DadosReducaoZClass_GetTotalISSQN(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 201</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 201</i>
	 */
	int ECF_DadosReducaoZClass_GetTotalOperacaoNaoFiscal(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalTroco(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 202</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetTotalTroco(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetTotalTroco(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetTotalTroco(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetTotalTroco(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 202</i>
	 */
	int ECF_DadosReducaoZClass_GetTotalTroco(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetValorGrandeTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 203</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetValorGrandeTotal(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetValorGrandeTotal(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetValorGrandeTotal(int ecfHandle, DoubleByReference value);
